Really fix alignment for language level bars
There were conflicting and obsolete CSS rules in another file
which caused the misalignment.

--- a/webroot/css/layouts/elements.css
+++ b/webroot/css/layouts/elements.css
@@ -1704,20 +1704,6 @@ form .language-icon-div {
     padding: 5px;
 }
 
-.languageLevel {
-}
-
-.languageLevel.unknown {
-    color: #AAAAAA;
-}
-
-.languageLevel .level {
-    background: #06A;
-    width: 20px;
-    height: 100%;
-    display: inline-block;
-}
-
 .warning-add-language {
     font-size: 16px;
     padding: 10px 15px;
